from enum import IntEnum

class Game_Piece(IntEnum):
    X = 1
    O = 2